apps/postgres/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        fsGroup: 999
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      containers:
      - name: postgres
        image: postgres:16
        args: ["-c", "ssl=on", "-c", "ssl_cert_file=/etc/db-ssl/tls.crt", "-c", "ssl_key_file=/etc/db-ssl/tls.key"]
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        - name: db-ssl-writable
          mountPath: /etc/db-ssl
          readOnly: true
      volumes:
      - name: db-ssl-source
        secret:
          secretName: db-ssl
      - name: db-ssl-writable
        emptyDir: {}
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
