apps/postgres/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: databases
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: postgres
    name: postgres
